Archive2/85/4c63bf40327ca5/output
main.cpp:15:19: error: 'C' is a protected member of 'A'
            next->C(a);
                  ^
main.cpp:9:18: note: can only access this member on an object of type 'D'
    virtual args C(args a=args()) {return a;}
                 ^
main.cpp:18:2: error: expected ';' after struct
}
 ^
 ;
2 errors generated.
